--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,7 +39,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:textColorHint">#666666</item>
         <item name="android:theme">@style/EditTextTheme</item>
     </style>
 
